--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>You Are An Idiot!</title>
+    <title>Fun-Games</title>
 </head>
 <body id="bodyEl">
     <h1 id="title"></h1>
@@ -17,16 +17,17 @@
     <script>
         const title = document.getElementById('title')
         const body = document.getElementById('bodyEl')
-
+	
         const music = new Audio('assets/music.mp3')
-
+	
         let nextAn = 1
         let indexN = 0
-        let wordlist = ['you', 'are', 'an', 'idiot']
+        let wordlist = ['Allow', 'Pop ups']
         let popups = [window]
 
         function getRandomCordinats(){
-            return [Math.floor(Math.random() * (screen.width-100 - 0) + 0), Math.floor(Math.random() * (screen.height-100 - 0) + 0)]
+            return [Math.floor(Math.random() * (screen.width-100 - 0) + 0), Math.floor(Math.random() * (screen.height-100 - 0) + 0)]{
+	    }
         }
 
         setInterval(()=>{
@@ -49,13 +50,7 @@
                 title.style.color = 'white'
                 body.style.backgroundColor = 'black'
                 nextAn = 1
-            }
-            if (indexN == 3) {
-                indexN = 0
-            }else{
-                indexN++
-            }
-        }, 400)
+        }, 2000)
 
         function createNewPopUp(){
             let newWindow = window.open('index.html','', 'width=350px height=200px')
