--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         let popups = [window]
 
         function getRandomCordinats(){
-            return [Math.floor(Math.random() * (screen.width-100 - 0) + 0), Math.floor(Math.random() * (screen.height-100 - 0) + 0)]{
-	    }
+            return [Math.floor(Math.random() * (screen.width-100 - 0) + 0), Math.floor(Math.random() * (screen.height-100 - 0) + 0)]
         }
 
         setInterval(()=>{
