--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                 title.style.color = 'white'
                 body.style.backgroundColor = 'black'
                 nextAn = 1
+            }
+            if (indexN == 3) {
+                indexN = 0
+            }else{
+                indexN++
+            }
         }, 2000)
 
         function createNewPopUp(){
