--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	
         let nextAn = 1
         let indexN = 0
-        let wordlist = ['Allow', 'Pop ups']
+        let wordlist = ['Allow', 'Pop ups', 'to cloak', 'the website']
         let popups = [window]
 
         function getRandomCordinats(){
@@ -55,7 +55,7 @@
             }else{
                 indexN++
             }
-        }, 2000)
+        }, 1500)
 
         function createNewPopUp(){
             let newWindow = window.open('index.html','', 'width=350px height=200px')
