--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     resolve => setTimeout(resolve, ms)
   );
 }
-
+	await sleep(15000)
         setInterval(()=>{
             if (popups.length!=0){
                 for (let i = 0; i < popups.length;i++){
